[project]
name = "langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "langchain-google-vertexai>=2.0.9",
    "langchain-mcp-adapters>=0.1.9",
    "langchain[google-vertexai,openai]>=0.3.26",
    "mcp[cli]>=1.12.2",
    "vertexai>=1.71.1",
]
